--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="baidu-site-verification" content="0KgozQO5Mo" />
     <title>张忠 - 前端开发工程师、吉他爱好者</title> 
     <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="./images/z.ico">   
