--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </nav>
             </div>
         </div>
+        <script type="text/javascript">(function(){document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));var bdcs = document.createElement('script');bdcs.type = 'text/javascript';bdcs.async = true;bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=11046149287652038902' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);})();</script>
         <div id="content " class="site-content ">
             <div id="primary " class="content-area ">
                 <main id="main " class="site-main " role="main ">
