--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="banner text-center">
-            <h1 class="wow fadeInDown animated" data-wow-delay=".8s" style="font-family: 'aziti'">智忠</h1>
+            <h1 class="wow fadeInDown animated" data-wow-delay=".8s" style="font-family: 'aziti'">张忠</h1>
             <h2 class="wow fadeInDown animated" data-wow-delay=".6s">前端工程师，UI设计师 & 吉他爱好者 ;)</h2>
             <a href="#" class="btn btn-border lg wow fadeInLeft animated" data-wow-delay="1.0s">联系我</a>
             <a href="#" class="btn btn-common lg wow fadeInRight animated" data-wow-delay="1.0s">了解更多</a>
