--- a/test.html
+++ b/test.html
@@ -20,5 +20,6 @@
 </head>
 <body>
 <img src="https://wx4.sinaimg.cn/mw690/006l0mboly1frqrq87y3qj30rs13lqv5.jpg" />
+<img src="http://mmbiz.qpic.cn/mmbiz_jpg/B6o5vDOZmW5EwFSNIhEUVNrScgkE1po3VuWW7ric9yY6XSN0lBIju8X4pusSsdYuXYhibA3wmEeNd78KwC5PTR2w/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1" />
 </body>
 </html>
